tests/paczka1/fuzzy1/44044891.err
Error in line 5: 6E0D1uK S981 9,5
Error in line 10: NlpUoMfcl A6q2 52,7
Error in line 6: 6E0D1uK S818 0,7
Error in line 12: 6E0D1uK A692 55,0
Error in line 13: bjFI A692 4,3
Error in line 14: 6E0D1uK A254 16,1
Error in line 18: S818 A254 37,6
Error in line 24: S818 S818 19,7
Error in line 29: 6E0D1uK A254 82,1
Error in line 22: TRD A692 24,8
Error in line 25: M73rIhrkDW S981 120,9
